# sbk-backend

./: .gitignore  Cargo.toml  README.md  build.rs  trivy_result.json
docs/: getting_started.md
docs/otel/: jaeger.yaml
docs/scanner/: trivy.md  trivy.yaml
docs/scanner/trivy/: Dockerfile  nginx.conf
docs/scanner/trivy/certs/: dhparam-localhost.pem  generate_pem.sh  localhost-selfsigned.crt  localhost-selfsigned.key
proto/: trivy.proto
sql/: sbk.sql  sbk_insert.sql
src/: client_hello.txt  main.rs  server_hello.txt  trivy.rs
src/auth/: claims_util.rs  mod.rs  oauth.rs
src/client/: mod.rs  service_util.rs  trivy_scanner.rs
src/error/: error_msg.rs  mod.rs
src/facade/: facade_util.rs  mod.rs  product_facade.rs  product_line_facade.rs
src/middleware/: mod.rs  opentelemetry.rs
src/model/: common.rs  constant.rs  mod.rs  product_line.rs
src/model/bom/: cdx.rs  cdx_jsf_signature.rs  mod.rs
src/service/: bom_service.rs  health_service.rs  mod.rs  product_line_service.rs  product_service.rs  scan_service.rs
src/util/: message_util.rs  mod.rs  validation_util.rs
