[package]
name = "sbk-backend"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

#[[bin]] # Bin to run the HelloWorld gRPC server
#name = "helloworld-server"
#path = "src/server_hello.rs"
#
#[[bin]] # Bin to run the HelloWorld gRPC client
#name = "helloworld-client"
#path = "src/client_hello.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "trivy-client"
path = "src/trivy.rs"

[dependencies]
tokio = { version = "^1.47.1", features = ["full"] }
hyper = { version = "^1.7.0", features = ["full"] }
hyper-util = { version= "0.1.17", features = ["client", "client-legacy", "http1", "http2"] }
hyper-rustls = { version = "^0.27.7", features = ["http1", "http2", "tls12", "ring", "webpki-tokio"] }
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "^0.6.6", features = ["add-extension", "auth","trace", "decompression-gzip", "set-header"] }

ammonia = "^4.1.2"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "query"] }
axum-server = { version = "0.7.2", features = [ "tls-rustls"] }
chrono = { version = "^0.4.42", features = [ "serde"] }
fluent = "0.17.0"
fluent-resmgr = "0.0.8"
futures = "0.3.31"
jsonwebtoken = { version = "9.3.1", features = [ "default" ] }
once_cell = "1.21.3"

rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "chrono"] }
rustls = "0.23.32"
rustls-pki-types = "1.12.0"
tracing = "0.1.41"
tracing-subscriber = { version="0.3.20", features = ["env-filter", "chrono",] }

unic-langid = { version = "0.9.6", features = [ "macros" ] }
validator = { version = "0.20.0", features = ["derive"] }
webpki-roots = "1.0.2"

prost = "0.14.1"
prost-types = "0.14.1" 
tonic = "0.14.2"
tonic-prost = "0.14.2" 

############ OpenTelemetry ############
opentelemetry = { version = "0.31.0", features = ["logs", "metrics", "trace", "internal-logs", "spec_unstable_logs_enabled"], optional = true }
opentelemetry-appender-tracing = { version = "0.31.1", optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "logs", "metrics", "trace", "spec_unstable_logs_enabled"], optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version="0.32.0", optional = true }

[features]
default = ["opentelemetry"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-appender-tracing",
    "dep:tracing-opentelemetry",
]



[build-dependencies]
tonic-prost-build = "0.14.2"

